--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="MONTICELLO, trade, centre, gallery">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="stylesheet" type="text/css" href="slick.css">
 	<link rel="stylesheet" type="text/css" href="slick-theme.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="grids.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="shortcut icon" href="Images/favicon.ico">
@@ -17,15 +17,35 @@
 	<header id="we-are">
 		<div id="slider1" class="we-are__slider">
 			<div class="we-are__slider__elem">Simple & mordern<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
-			<div class="we-are__slider__elem slider-changes2">Simple & mordern2<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
-			<div class="we-are__slider__elem slider-changes3">Simple & mordern3<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
-			<div class="we-are__slider__elem slider-changes4">Simple & mordern4<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
-			<div class="we-are__slider__elem slider-changes5">Simple & mordern5<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
+			<div class="we-are__slider__elem">Simple & mordern2<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
+			<div class="we-are__slider__elem">Simple & mordern3<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
+			<div class="we-are__slider__elem">Simple & mordern4<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
+			<div class="we-are__slider__elem">Simple & mordern5<br><span class="we-are__slider__elem-text">We make the world's beautiful every day</span></div>
 		</div>
 		<div class="container-wrap">
 			<div class="container container--relative">
 				<nav class="menu">
-					<img class="menu-logo" src="Images/Logo.png" alt="logo">
+					<img class="menu-logo" src="Images/Logo.png">
+					<svg class="inline-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+					width="42px" height="32px" viewBox="0 0 32 22.5" enable-background="new 0 0 32 22.5" xml:space="preserve">
+					<g class="svg-menu-toggle">
+						<path class="bar" d="M20.945,8.75c0,0.69-0.5,1.25-1.117,1.25H3.141c-0.617,0-1.118-0.56-1.118-1.25l0,0
+						c0-0.69,0.5-1.25,1.118-1.25h16.688C20.445,7.5,20.945,8.06,20.945,8.75L20.945,8.75z">
+						</path>
+						<path class="bar" d="M20.923,15c0,0.689-0.501,1.25-1.118,1.25H3.118C2.5,16.25,2,15.689,2,15l0,0c0-0.689,0.5-1.25,1.118-1.25 h16.687C20.422,13.75,20.923,14.311,20.923,15L20.923,15z">
+						</path>
+						<path class="bar" d="M20.969,21.25c0,0.689-0.5,1.25-1.117,1.25H3.164c-0.617,0-1.118-0.561-1.118-1.25l0,0
+						c0-0.689,0.5-1.25,1.118-1.25h16.688C20.469,20,20.969,20.561,20.969,21.25L20.969,21.25z">
+						</path>
+						<rect width="32" height="22" fill="none"></rect>
+					</g>
+					</svg>
+					<ul class="menu-nav">
+						<li class="menu-nav__elem"><a href="#about-us"><span class="round-icon"></span>About Us</a></li>
+						<li class="menu-nav__elem"><a href="#we-do"><span class="round-icon"></span>projects</a></li>
+						<li class="menu-nav__elem"><a href="#news"><span class="round-icon"></span>news</a></li>
+						<li class="menu-nav__elem"><a href="#contacts"><span class="round-icon"></span>contact</a></li>
+					</ul>
 					<ul class="social-net">
 						<li><a class="social-net-block" href="https://www.facebook.com" target="_blank"><i class="social-net-icon fab fa-facebook-f"></i></a>
 						</li>
@@ -34,20 +54,12 @@
 						<li><a class="social-net-block" href="https://www.instagram.com" target="_blank"><i class="social-net-icon fab fa-instagram"></i></a>
 						</li>
 					</ul>
-					<ul class="menu-nav">
-						<li class="menu-nav__elem"><a href="#about-us"><span class="round-icon"></span>About Us</a></li>
-						<li class="menu-nav__elem"><a href="#we-do"><span class="round-icon"></span>projects</a></li>
-						<li class="menu-nav__elem"><a href="#news"><span class="round-icon"></span>news</a></li>
-						<li class="menu-nav__elem"><a href="#contacts"><span class="round-icon"></span>contact</a></li>
-					</ul>
 				</nav>
 			</div>
 		</div>
 		<a class="we-are__scroll" href="#we-do">
 			<i class="fas fa-chevron-down we-are__scroll-arrow"></i>
 		</a>
-	</header>
-
 	<main>
 		<article class="we-do" id="we-do">
 			<div class="container">
@@ -85,102 +97,98 @@
 			<div class="container">
 				<div class="line2"></div>
 				<h1 class="news__tittle">Latest news</h1>
-				<div id="slider2" class="news__slider">
-					<div class="slider2__elem">
-						<img src="Images/Frame1.jpeg" alt="building">
-						<div class="contain">
-							<h4 class="slider2__elem-tittle">See The Unmatched<br>Beauty Of The Great.</h4>
-							<div class="slider2__elem-text">Free directories: directories are perfect for customers that are...searching for</div>
-							<div class="slider2__elem-author">
-								<img src="Images/Ellipse10.png" alt="author">
-								<div class="slider2__elem-author__info">
-									<div class="slider2__elem-author__name">Isaac Dunn</div>
-									<div class="slider2__elem-author__date">09 Feb 2017</div>
-								</div>
-							</div>
-						</div>	
-					</div>
-					<div class="slider2__elem">
-						<img src="Images/Frame2.jpeg" alt="building">
-						<div class="contain">
-							<h4 class="slider2__elem-tittle">Effective Advertising<br>Pointer.</h4>
-							<div class="slider2__elem-text">Having a home based business is a wonderful asset to your life...</div>
-							<div class="slider2__elem-author">
-								<img src="Images/Ellipse102.png" alt="author">
-								<div class="slider2__elem-author__info">
-									<div class="slider2__elem-author__name">Dominic Freeman</div>
-									<div class="slider2__elem-author__date">24 Apr 2017</div>
-								</div>
-							</div>
-						</div>	
-					</div>
-					<div class="slider2__elem">
-						<img src="Images/Frame3.jpeg" alt="building">
-						<div class="contain">
-							<h4 class="slider2__elem-tittle">Hypnotize Yourself<br>Into The Ghost.</h4>
-							<div class="slider2__elem-text">There are many things that are important to catalog design....</div>
-							<div class="slider2__elem-author">
-								<img src="Images/Ellipse103.png" alt="author">
-								<div class="slider2__elem-author__info">
-									<div class="slider2__elem-author__name">Alice Ward</div>
-									<div class="slider2__elem-author__date">30 Dec 2017</div>
-								</div>
-							</div>
-						</div>	
-					</div>
-					<div class="slider2__elem">
-						<img src="Images/Frame1.jpeg" alt="building">
-						<div class="contain">
-							<h4 class="slider2__elem-tittle">See The Unmatched<br>Beauty Of The Great.</h4>
-							<div class="slider2__elem-text">Free directories: directories are perfect for customers that are...searching for</div>
-							<div class="slider2__elem-author">
-								<img src="Images/Ellipse10.png"alt="author">
-								<div class="slider2__elem-author__info">
-									<div class="slider2__elem-author__name">Isaac Dunn</div>
-									<div class="slider2__elem-author__date">09 Feb 2017</div>
-								</div>
-							</div>
-						</div>	
-					</div>
-					<div class="slider2__elem" alt="building">
-						<img src="Images/Frame2.jpeg">
-						<div class="contain">
-							<h4 class="slider2__elem-tittle">Effective Advertising<br>Pointer.</h4>
-							<div class="slider2__elem-text">Having a home based business is a wonderful asset to your life...</div>
-							<div class="slider2__elem-author">
-								<img src="Images/Ellipse102.png" alt="author">
-								<div class="slider2__elem-author__info">
-									<div class="slider2__elem-author__name">Dominic Freeman</div>
-									<div class="slider2__elem-author__date">24 Apr 2017</div>
-								</div>
-							</div>
-						</div>	
-					</div>
+				<div class="news__slider-wrap">
 					<div class="news__slider-leftarrow"><i class="fas fa-chevron-down we-are__scroll-arrow"></i></div>
-					<div class="news__slider-rightarrow"><i class="fas fa-chevron-down we-are__scroll-arrow"></i></div>
-				</div>
+					<div class="news__slider-rightarrow"><i class="fas fa-chevron-down we-are__scroll-arrow"></i></div>	
+					<div id="slider2" class="news__slider">
+						<div class="slider2__elem">
+							<img src="Images/Frame1.jpeg" alt="building">
+							<div class="contain">
+								<h4 class="slider2__elem-tittle">See The Unmatched<br>Beauty Of The Great.</h4>
+								<div class="slider2__elem-text">Free directories: directories are perfect for customers that are...searching for</div>
+								<div class="slider2__elem-author">
+									<img src="Images/Ellipse10.png" alt="author">
+									<div class="slider2__elem-author__info">
+										<div class="slider2__elem-author__name">Isaac Dunn</div>
+										<div class="slider2__elem-author__date">09 Feb 2017</div>
+									</div>
+								</div>
+							</div>	
+						</div>
+						<div class="slider2__elem">
+							<img src="Images/Frame2.jpeg" alt="building">
+							<div class="contain">
+								<h4 class="slider2__elem-tittle">Effective Advertising<br>Pointer.</h4>
+								<div class="slider2__elem-text">Having a home based business is a wonderful asset to your life...</div>
+								<div class="slider2__elem-author">
+									<img src="Images/Ellipse102.png" alt="author">
+									<div class="slider2__elem-author__info">
+										<div class="slider2__elem-author__name">Dominic Freeman</div>
+										<div class="slider2__elem-author__date">24 Apr 2017</div>
+									</div>
+								</div>
+							</div>	
+						</div>
+						<div class="slider2__elem">
+							<img src="Images/Frame3.jpeg" alt="building">
+							<div class="contain">
+								<h4 class="slider2__elem-tittle">Hypnotize Yourself<br>Into The Ghost.</h4>
+								<div class="slider2__elem-text">There are many things that are important to catalog design....</div>
+								<div class="slider2__elem-author">
+									<img src="Images/Ellipse103.png" alt="author">
+									<div class="slider2__elem-author__info">
+										<div class="slider2__elem-author__name">Alice Ward</div>
+										<div class="slider2__elem-author__date">30 Dec 2017</div>
+									</div>
+								</div>
+							</div>	
+						</div>
+						<div class="slider2__elem">
+							<img src="Images/Frame1.jpeg" alt="building">
+							<div class="contain">
+								<h4 class="slider2__elem-tittle">See The Unmatched<br>Beauty Of The Great.</h4>
+								<div class="slider2__elem-text">Free directories: directories are perfect for customers that are...searching for</div>
+								<div class="slider2__elem-author">
+									<img src="Images/Ellipse10.png"alt="author">
+									<div class="slider2__elem-author__info">
+										<div class="slider2__elem-author__name">Isaac Dunn</div>
+										<div class="slider2__elem-author__date">09 Feb 2017</div>
+									</div>
+								</div>
+							</div>	
+						</div>
+						<div class="slider2__elem" alt="building">
+							<img src="Images/Frame2.jpeg">
+							<div class="contain">
+								<h4 class="slider2__elem-tittle">Effective Advertising<br>Pointer.</h4>
+								<div class="slider2__elem-text">Having a home based business is a wonderful asset to your life...</div>
+								<div class="slider2__elem-author">
+									<img src="Images/Ellipse102.png" alt="author">
+									<div class="slider2__elem-author__info">
+										<div class="slider2__elem-author__name">Dominic Freeman</div>
+										<div class="slider2__elem-author__date">24 Apr 2017</div>
+									</div>
+								</div>
+							</div>	
+						</div>
+					</div>
+				</div>	
 			</div>
 		</article>
 		<article class="gallery">
 			<div class="container">
 				<div class="line2 black-line"></div>
 				<h1 class="gallery__title">gallery</h1>
-				<div class="grid clear-fix">
-				    <div class="width-1-2 gallery__left-block">
+				<div class="gallery-grid">
+					<div class="gallery-grid__left">
 				    	<img src="Images/Rectangle18.jpeg" alt="galery-pic">
-				        <img src="Images/360.png" alt="360">
-				    </div>
-				    <div class="width-1-2">
-				        <div class="grid clear-fix">
-				            <div class="width-1-2 gallery__right-block"><img src="Images/Rectangle182.jpeg" alt="galery-pic"></div>
-				            <div class="width-1-2 gallery__right-block"><img src="Images/Rectangle183.jpeg" alt="galery-pic"></div>
-				        </div>
-				        <div class="grid">
-				            <div class="width-1-2 gallery__right-block"><img src="Images/Rectangle184.jpeg" alt="galery-pic"></div>
-				            <div class="width-1-2 gallery__right-block"><img src="Images/Rectangle185.jpeg" alt="galery-pic"></div>
-				        </div>
-				    </div>
-				</div>
+				        <span></span>
+			        </div>
+			        <div class="gallery-grid__first-ico"><img src="Images/Rectangle182.jpeg" alt="galery-pic"></div>
+			        <div class="gallery-grid__second-ico"><img src="Images/Rectangle184.jpeg" alt="galery-pic"></div>
+		            <div class="gallery-grid__third-ico"><img src="Images/Rectangle183.jpeg" alt="galery-pic"></div>
+		            <div class="gallery-grid__fouth-ico"><img src="Images/Rectangle185.jpeg" alt="galery-pic"></div>
+		        </div>
 				<button class="main-button gridpos">see more</button>
 			</div>
 		</article>
@@ -210,16 +218,14 @@
 					<img src="Images/Logo.png" alt="logo">
 					<h2 class="footer__info-text">Copyrights © 2017 Monticello Group<hr class="info-text-decoration"> Made with&nbsp;<i class="fas fa-heart"></i>&nbsp;by Ga Huy</h2>
 				</div>
-				<div class="footer__social-media">
-					<ul class="social-net social-footer-pos">
-						<li><a class="social-net-block" href="https://www.facebook.com" target="_blank"><i class="social-net-icon fab fa-facebook-f"></i></a>
-						</li>
-						<li><a class="social-net-block" href="https://twitter.com" target="_blank"><i class="social-net-icon fab fa-twitter"></i></a>
-						</li>
-						<li><a class="social-net-block" href="https://www.instagram.com" target="_blank"><i class="social-net-icon fab fa-instagram"></i></a>
-						</li>
-					</ul>
-				</div>
+				<ul class="social-net social-footer-pos">
+					<li><a class="social-net-block" href="https://www.facebook.com" target="_blank"><i class="social-net-icon fab fa-facebook-f"></i></a>
+					</li>
+					<li><a class="social-net-block" href="https://twitter.com" target="_blank"><i class="social-net-icon fab fa-twitter"></i></a>
+					</li>
+					<li><a class="social-net-block" href="https://www.instagram.com" target="_blank"><i class="social-net-icon fab fa-instagram"></i></a>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</footer>
