--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="keywords" content="MONTICELLO, trade, centre, gallery">
-	<meta content="width=device-width, initial-scale=1" name="viewport" />
+	<meta content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="slick.css">
 	<link rel="stylesheet" type="text/css" href="slick-theme.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
